# stack_looper

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  engine.cpp  engine.h  jni_bridge.cpp
android/app/src/main/kotlin/com/example/stack_looper/: MainActivity.kt  StackLooperAudio.kt
docs/: FEATURE_GUIDE.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/constants/: app_constants.dart  app_theme.dart
lib/models/: looper_state.dart  track.dart
lib/providers/: looper_provider.dart  theme_provider.dart
lib/screens/: fx_screen.dart  looper_screen.dart  settings_screen.dart
lib/services/: audio_service.dart  native_audio_engine.dart  native_audio_service.dart
lib/widgets/: feature_guide_dialog.dart  onboarding_dialog.dart  settings_bar.dart  top_menu_bar.dart  track_card.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
test/providers/: looper_provider_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
